message Request {
    message Data0 {
        required uint32 data0 = 0x0a; // 05
        required uint32 data1 = 0x1e; // 02
        required uint64 data2 = 0x28; // 10800000000
    }

    message Data2 {
        message Data0 {
            required bytes data0 = 0x0a; // 60
            required uint32 data1 = 0x14; // 01
        }
        required Data0 data0 = 0x0a; // 65
    }

    required Data0 data0 = 0x0a; // 0d
    required uint32 data1 = 0x1e; // 00
    required Data2 data2 = 0x32; // 67
    required bytes random = 0x3c; // 10
    required bytes data4 = 0x46; // 01
    required bytes data5 = 0x50; // 02

}

message Response {
    message Data {
        message Data0 {
            message Data0 {
                required bytes data0 = 0x0a; // 60
                required uint32 data1 = 0x14;
                required bytes data2 = 0x1e; // 100
            }
            required Data0 data0 = 0x0a;
        }
        message Data3 {
            required bytes data0 = 0x0a;
        }

        required Data0 data0 = 0x0a;
        required bytes data1 = 0x14;
        required bytes data2 = 0x1e;
        required Data3 data3 = 0x28;
        required bytes data4 = 0x32;
        required bytes data5 = 0x3c;
    }

    required Data data = 0x0a;
}

message ChallengePacket {
    message Data0 {
        message Data0 {
            required bytes data0 = 0x0a;
        }
        required Data0 data0 = 0x0a;
    }
    required Data0 data0 = 0x0a;
    required bytes data1 = 0x14;
    required bytes data2 = 0x1e;
}


